19700
scala> val v = (headVal: Int, currentResultStream: => Int) => head
<console>:1: error: identifier expected but '=>' found.
       val v = (headVal: Int, currentResultStream: => Int) => head
                                                   ^

